Track all snapshot shard statuses